fixed title overlapping

--- a/client/src/style/Home.scss
+++ b/client/src/style/Home.scss
@@ -129,9 +129,9 @@
 }
 
 .MainTitle{
-  position: fixed;
-  top: 20px;
-  text-align: center;
+  position: relative;
+  top: 120px;
+  text-align: left;
   font-family: cursive;
   font-size: 70pt;
 }
